syntax = "proto3";

package userrpc;
option go_package="./userrpc";

message Request {
 	string ping = 1;
}

message Response {
 	string pong = 1;
}

// 用户相关
message GetUserReq {
	int64 id = 1;
}

message GetUserResp {
	int64 id = 1;
	string username = 2;
	string email = 3;
}

service UserRpc {
  	rpc Ping(Request) returns (Response);

	// 根据 ID 查询用户基本信息（不返回密码）
	rpc GetUser(GetUserReq) returns (GetUserResp);
}
